core: add password recovery tool
Repair interrupted account and wallet password changes offline.
Add terminal and desktop entry points with recovery regression coverage.